--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活6天)香港-3.68MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-841.9KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
-  - {name: 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇨🇳 中国-271.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇯🇵 日本-3.27MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-301.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-305.1KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-480.6KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
+  - {name: 🇺🇸 美国-2.53MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-432.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-438.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-434.2KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-449.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇭🇰 香港-3.78MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-385.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-423.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-6.06MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.54MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活6天)香港-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活6天)香港-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活6天)香港-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活6天)香港-3.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活6天)香港-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活6天)香港-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活6天)香港-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活6天)香港-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
