--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
-  - {name: 🇺🇸 美国-2.53MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-432.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-438.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-271.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-434.2KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇭🇰 香港-3.78MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-385.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-423.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-6.06MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.54MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-347.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇭🇰 香港-964.1KB/s(Youtube:不良林), server: 103.253.43.228, port: 38000, type: trojan, password: 175c218a-fb8d-46b0-a7af-b9ff6a719856, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-486.0KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-412.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: 129.150.61.170, port: 29493, type: vmess, uuid: ac0d0076-93d2-48ad-ba6e-ea5c8d7b0132, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.150.61.170}}
+  - {name: 🇨🇳 中国-541.9KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-444.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
