--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-271.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-434.2KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-347.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇭🇰 香港-964.1KB/s(Youtube:不良林), server: 103.253.43.228, port: 38000, type: trojan, password: 175c218a-fb8d-46b0-a7af-b9ff6a719856, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-486.0KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-412.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: 129.150.61.170, port: 29493, type: vmess, uuid: ac0d0076-93d2-48ad-ba6e-ea5c8d7b0132, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.150.61.170}}
-  - {name: 🇨🇳 中国-541.9KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-444.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-236.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-502.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-423.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-3.51MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-324.9KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇬🇧 英国-1.12MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-996.5KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-541.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
